# AI-Chat-Bot

./: .gitignore  LICENSE  README.md  flask_demo.py  gunicorn_conf.py  logger_config.py  main.py  pyproject.toml
agent_core/: README.md  config.py
agent_core/agent/: base.py  dataframe_agent.py  dataframe_state.py  fncall_agent.py
agent_core/llm/: base.py  oai.py
agent_core/memory/: base.py  cache.py  demo.py  memory.py  prompts.py  storage.py  utils.py
agent_core/prompts/: __init__.py  clarification_questions_prompt.py  correct_execute_sql_query_usage_error_prompt.py  generate_dataset_summary.py  rephrase_query.py
agent_core/prompts/templates/: clarification_questions_prompt.tmpl  correct_output_type_error_prompt.tmpl  dataset_summary.tmpl  rephrase_query.tmpl
agent_core/skills/: manager.py
agent_core/tools/: base.py
agent_core/vectorstores/: __init__.py  milvus.py  vectorstore.py
data_inteligence/: README.md  __init__.py  constants.py  exceptions.py
data_inteligence/code_core/code_execution/: code_executor.py
data_inteligence/code_core/code_generation/: base.py  code_cleaning.py  code_validation.py
data_inteligence/code_core/response/: base.py  chart.py  dataframe.py  error.py  number.py  parser.py  string.py
data_inteligence/data_loader/: duck_db_connection_manager.py  loader.py  local_loader.py  semantic_layer_schema.py  sql_loader.py  view_loader.py
data_inteligence/dataframe/: __init__.py  base.py  virtual_dataframe.py
data_inteligence/helpers/: codecs.py  path.py  response_parser.py  sql_load.py
data_inteligence/query_builders/: __init__.py  base_query_builder.py  local_query_builder.py  sql_parser.py  sql_transformation_manager.py
docs/: deploy.md
migrations/: env.py
migrations/versions/: 6e303651120d_create_table.py
scripts/: fix_db.py  start.sh
server/: Dockerfile  README.md  config.py  setting.py
server/api/: __init__.py
server/api/chat/: __init__.py  chat.py
server/api/conversations/: __init__.py  conversations.py
server/core/: server.py
server/scripts/: fix_db.py
tests/: conftest.py  test_database_connection.py
(+89 files in other folders)
