[project]
name = "ai-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.0",
    "duckdb>=1.4.2",
    "fastapi>=0.121.2",
    "openai>=2.8.1",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pymilvus>=2.6.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlglot>=27.29.0",
    "uvicorn>=0.38.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
