[project]
name = "ai-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "astor>=0.8.1",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.0",
    "duckdb>=1.4.2",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "openai>=2.8.1",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pymilvus>=2.6.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sqlglot>=27.29.0",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
testpaths = ["server/test"]
python_files = ["test_*.py", "*_test.py"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
